--- a/index.html
+++ b/index.html
@@ -143,41 +143,39 @@
     <section id="pictures" class="container-fluid content-section text-center">
         <div class="container">
             <div class="col-lg-12">
-                <h2>Pictures</h2>
+                <h2>Photos</h2>
                 <div class="row">
-                    <div class="col-lg-4">
-                        <h4>Jan Korinek Soultet Swings!</h4>
+                    <div class="col-lg-6">
+                        <p>   </p>
+                        <p>Jan Korinek Soultet Swings!</p>
                         <p>Prague, CZ</p>
                         <p>26-07-16</p>
                         <a data-flickr-embed="true" data-context="true"  href="https://www.flickr.com/photos/missmikeymay/31812828730/in/album-72157675111386894/" title="14-1"><img src="https://c3.staticflickr.com/1/483/31812828730_a67ab6f80b.jpg" width="500" height="342" alt="14-1"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>                    
                     </div> 
-                    <div class="col-lg-4">
-                        <h4>'Swing Out the Blues' CD Release Party</h4>
+                    <div class="col-lg-6">
+                        <p>   </p>
+                        <p>'Swing Out the Blues' CD Release Party</p>
                         <p>Prague, CZ</p>
                         <p>14-10-16</p>
                         <a data-flickr-embed="true" data-context="true"  href="https://www.flickr.com/photos/missmikeymay/31812828730/in/album-72157675111386894/" title="14-1"><img src="https://c3.staticflickr.com/1/483/31812828730_a67ab6f80b.jpg" width="500" height="342" alt="14-1"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>                        
                     </div>
                 </div>
-                    <div class="col-lg-4">
-                        <h4>The Organ Grinders at Evergreen</h4>
-                        <p>Dresden, DE</p>
-                        <p>21-10-16</p>
-                        <a data-flickr-embed="true" data-context="true"  href="https://www.flickr.com/photos/missmikeymay/31812828730/in/album-72157675111386894/" title="14-1"><img src="https://c3.staticflickr.com/1/483/31812828730_a67ab6f80b.jpg" width="500" height="342" alt="14-1"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>                        
-                    </div>
-                </div>
                 <div class="row">
-                    <div class="col-lg-4">
-                        <p>Soultet Swings! 26-07-16</p>
+                    <div class="col-lg-6">
+                        <p>   </p>
+                        <p>Jan Korinek Soultet Swings!</p>
+                        <p>Prague, CZ</p>
+                        <p>26-07-16</p>
                         <a data-flickr-embed="true" data-context="true"  href="https://www.flickr.com/photos/missmikeymay/31812828730/in/album-72157675111386894/" title="14-1"><img src="https://c3.staticflickr.com/1/483/31812828730_a67ab6f80b.jpg" width="500" height="342" alt="14-1"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>                    
                     </div> 
-                    <div class="col-lg-4">
-                        <p>CD Release Party 14-10-16</p>
+                    <div class="col-lg-6">
+                        <p>   </p>
+                        <p>'Swing Out the Blues' CD Release Party</p>
+                        <p>Prague, CZ</p>
+                        <p>14-10-16</p>
                         <a data-flickr-embed="true" data-context="true"  href="https://www.flickr.com/photos/missmikeymay/31812828730/in/album-72157675111386894/" title="14-1"><img src="https://c3.staticflickr.com/1/483/31812828730_a67ab6f80b.jpg" width="500" height="342" alt="14-1"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>                        
                     </div>
                 </div>
-                    <div class="col-lg-4">
-                        <p>CD Release Party 14-10-16</p>
-                        <a data-flickr-embed="true" data-context="true"  href="https://www.flickr.com/photos/missmikeymay/31812828730/in/album-72157675111386894/" title="14-1"><img src="https://c3.staticflickr.com/1/483/31812828730_a67ab6f80b.jpg" width="500" height="342" alt="14-1"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>                        
             </div>
         </div>
     </section>
@@ -189,77 +187,6 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Upcoming Shows</h2>
                     <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FMissMikeyMaySings%2F&tabs=events&width=340&height=500&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>                </div>
-            </div>
-        </div>
-    </section>
-    
-    <!-- Photo Gallery Section -->
-    <section id="photos" class="content-section text-center">
-        <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <h2 class="page-header">Photo Gallery</h2>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="http://placehold.it/400x300" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="http://placehold.it/400x300" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="http://placehold.it/400x300" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="http://placehold.it/400x300" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="http://placehold.it/400x300" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="http://placehold.it/400x300" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="http://placehold.it/400x300" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="http://placehold.it/400x300" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="http://placehold.it/400x300" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="http://placehold.it/400x300" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="http://placehold.it/400x300" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="http://placehold.it/400x300" alt="">
-                </a>
-            </div>
             </div>
         </div>
     </section>
