--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
                         <a class="page-scroll" href="#videos">Videos</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#photos">Photos</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#shows">Shows</a>
                     </li>
                     <li>
@@ -140,23 +143,39 @@
     </section>
 
     <!-- Flickr Section -->
-    <section id="pictures" class="container-fluid content-section text-center">
+    <section id="photos" class="container-fluid content-section text-center">
         <div class="container">
             <div class="col-lg-12">
                 <h2>Photos</h2>
                 <div class="row">
                     <div class="col-lg-6">
-                        <p>   </p>
+                        <p> <br> </p>
                         <p>Jan Korinek Soultet Swings!
                         <br>Prague, CZ
                         <br>26-07-16</p>
                         <a data-flickr-embed="true" data-context="true"  href="https://www.flickr.com/photos/missmikeymay/31812828730/in/album-72157675111386894/" title="14-1"><img src="https://c3.staticflickr.com/1/483/31812828730_a67ab6f80b.jpg" width="500" height="342" alt="14-1"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>                    
                     </div> 
                     <div class="col-lg-6">
-                        <p>   </p>
-                        <p>'Swing Out the Blues' CD Release Party</p>
-                        <p>Prague, CZ</p>
-                        <p>14-10-16</p>
+                        <p> <br> </p>
+                        <p>'Swing Out the Blues' CD Release Party
+                        <br>Prague, CZ
+                        <br>14-10-16</p>
+                        <a data-flickr-embed="true" data-context="true"  href="https://www.flickr.com/photos/missmikeymay/32071043921/in/album-72157677216679351/" title="DSC_5466"><img src="https://c2.staticflickr.com/1/721/32071043921_a52ca2951e.jpg" width="500" height="334" alt="DSC_5466"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-6">
+                        <p> <br> </p>
+                        <p>Jan Korinek Soultet Swings!
+                        <br>Prague, CZ
+                        <br>26-07-16</p>
+                        <a data-flickr-embed="true" data-context="true"  href="https://www.flickr.com/photos/missmikeymay/31812828730/in/album-72157675111386894/" title="14-1"><img src="https://c3.staticflickr.com/1/483/31812828730_a67ab6f80b.jpg" width="500" height="342" alt="14-1"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>                    
+                    </div> 
+                    <div class="col-lg-6">
+                        <p> <br> </p>
+                        <p>'Swing Out the Blues' CD Release Party
+                        <br>Prague, CZ
+                        <br>14-10-16</p>
                         <a data-flickr-embed="true" data-context="true"  href="https://www.flickr.com/photos/missmikeymay/32071043921/in/album-72157677216679351/" title="DSC_5466"><img src="https://c2.staticflickr.com/1/721/32071043921_a52ca2951e.jpg" width="500" height="334" alt="DSC_5466"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
                     </div>
                 </div>
