--- a/index.html
+++ b/index.html
@@ -153,13 +153,17 @@
                         <p>Jan Korinek Soultet Swings!
                         <br>Prague, CZ
                         <br>26-07-16</p>
-                        <a data-flickr-embed="true" data-context="true"  href="https://www.flickr.com/photos/missmikeymay/31812828730/in/album-72157675111386894/" title="14-1"><img src="https://c3.staticflickr.com/1/483/31812828730_a67ab6f80b_n.jpg" width="320" height="219" alt="14-1"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>                    </div> 
+                        <div class="flickrwrap">
+                            <a data-flickr-embed="true" data-context="true"  href="https://www.flickr.com/photos/missmikeymay/31812828730/in/album-72157675111386894/" title="14-1"><img src="https://c3.staticflickr.com/1/483/31812828730_a67ab6f80b_n.jpg" alt="14-1"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>                    </div> 
+                        </div>
                     <div class="col-lg-6">
                         <p> <br> </p>
                         <p>'Swing Out the Blues' CD Release Party
                         <br>Prague, CZ
                         <br>14-10-16</p>
-                        <a data-flickr-embed="true" data-context="true"  href="https://www.flickr.com/photos/missmikeymay/32071043921/in/album-72157677216679351/" title="DSC_5466"><img src="https://c2.staticflickr.com/1/721/32071043921_a52ca2951e_n.jpg" width="320" height="214" alt="DSC_5466"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>                    </div>
+                        <div class="flickrwrap">
+                        <a data-flickr-embed="true" data-context="true"  href="https://www.flickr.com/photos/missmikeymay/32071043921/in/album-72157677216679351/" title="DSC_5466"><img src="https://c2.staticflickr.com/1/721/32071043921_a52ca2951e_n.jpg" alt="DSC_5466"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>                    </div>
+                    </div>
                 </div>
             </div>
         </div>
