--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                         <p>Jan Korinek Soultet Swings!
                         <br>Prague, CZ
                         <br>26-07-16</p>
-                        <div class="flickrwrap text-center">
+                        <div class="flickrwrap">
                             <iframe src="https://www.flickr.com/photos/missmikeymay/31812828730/player/" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
                         </div>
                     <div class="col-lg-6">
@@ -161,8 +161,10 @@
                         <p>'Swing Out the Blues' CD Release Party
                         <br>Prague, CZ
                         <br>14-10-16</p>
-                        <div class="flickrwrap text-center">
-                        <a data-flickr-embed="true" data-context="true"  href="https://www.flickr.com/photos/missmikeymay/32071043921/in/album-72157677216679351/" title="DSC_5466"><img src="https://c2.staticflickr.com/1/721/32071043921_a52ca2951e_n.jpg" alt="DSC_5466"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>                    </div>
+                        <div class="flickrwrap">
+                        <iframe src="https://www.flickr.com/photos/missmikeymay/32071043921/player/" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+                        </div>
+                        </div>
                     </div>
                 </div>
             </div>
