--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Alex+Brush|Parisienne" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Handlee|Merienda|Patrick+Hand" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bigshot+One|Maiden+Orange|Overlock+SC|Patua+One|Rakkas" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Andada|Bitter|Maitree|Roboto+Slab|Scope+One|Tinos|Vollkorn" rel="stylesheet">
 
@@ -77,10 +77,10 @@
                         <a class="page-scroll" href="#news">News</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#music">Music</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#music">Music</a>
+                        <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#videos">Videos</a>
@@ -125,19 +125,6 @@
         </div>
     </section>
 
-    <!-- About Section -->
-    <section id="about" class="container-fluid content-section text-center">
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-                <h2>About</h2>
-                <p>Miss Mikey May is an Israeli-American blues and jazz singer. Her powerful and soulful vocals are inspired by the great jazz and blues divas and deliver a double-dose of musicality and emotion that radiate on and off the stage.</p>
-                <p>Mikey grew up on the stage, singing, acting, and dancing throughout her school years. She spent the better part of her twenties performing in rock, jazz, and blues bands, as well as cabaret and burlesque productions. In 2012 she joined the global swing and blues dance communities, dancing throughout Europe and absorbing the best swing and blues bands. </p>
-                <p>In early 2016 The Organ Grinders project was born from her collaboration with <a href="http://www.jankorinek.org/" target=_blank>Jan Kořínek</a>, world-class Czech Hammond organ player and band leader. In October 2016, the project released their debut album, 'Swing Out the Blues', featuring dancer-friendly swingin' blues tributes to classic tunes.</p>
-                <p>When she is not performing with The Organ Grinders, Mikey sings regularly with the Ray Charles Tribute Orchestra led by <a href="http://jakubzomer.com/" target=_blank>Jakub Zomer</a> and with the dixieland jazz band <a href="http://www.appendixie.cz/en/" target=_blank>AppenDixie</a> led by Petr Seghman. </p>
-            </div>
-        </div>
-    </section>
-
     <!-- Music  Section -->
     <section id="music" class="container-fluid widget-section text-center">
         <div class="widget-section">
@@ -146,7 +133,7 @@
                     <h2>Music</h2>
                      <iframe style="border: 0; width: 100%; height: 472px;" src="https://bandcamp.com/EmbeddedPlayer/album=1574344274/size=large/bgcol=ffffff/linkcol=7137dc/artwork=small/transparent=true/" seamless><a href="http://missmikeymay.bandcamp.com/album/stay-with-it">Stay With It by Miss Mikey May and The Organ Grinders</a></iframe>
                      <br>
-                     <br> 
+                     <br>
                      <iframe style="border: 0; width: 100%; height: 472px;" src="https://bandcamp.com/EmbeddedPlayer/album=2572896376/size=large/bgcol=ffffff/linkcol=7137dc/artwork=small/transparent=true/" seamless><a href="http://missmikeymay.bandcamp.com/album/swing-out-the-blues">Swing Out the Blues by Miss Mikey May and The Organ Grinders</a></iframe>
                     <br>
                     <br>
@@ -157,28 +144,28 @@
         </div>
     </section>
 
+    <!-- About Section -->
+    <section id="about" class="container-fluid content-section text-center">
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <h2>About</h2>
+                <p>Israeli-American blues and jazz singer, Mikey's powerful and soulful vocals are inspired by the great jazz and blues divas and deliver a double-dose of musicality and emotion that radiate on and off the stage.</p>
+                <p>Mikey grew up on the stage, singing, acting, and dancing since her school years and well into her twenties. In 2012 she joined the global swing and blues dance communities, dancing throughout Europe and absorbing the best swing and blues bands from the dance floor. </p>
+                <p>In early 2016 she launched the Organ Grinders project with <a href="http://www.jankorinek.org/" target=_blank>Jan Kořínek</a>, world-class Czech Hammond organ player and band leader. In October 2016, the project released their debut album, 'Swing Out the Blues', featuring dancer-friendly swingin' blues tributes to classic tunes.</p>
+                <p>The project's second album 'Stay With It' was released in February 2018, and features Mikey's original compositions as well as reinvented jazz and blues classics. The album also spans a wider musical ranges, and includes some funk and latin grooves, while still maintaining the danceable groove that you know and love. </p>
+                <p>When she is not performing with The Organ Grinders, Mikey sings regularly with the Ray Charles Tribute Orchestra led by <a href="http://jakubzomer.com/" target=_blank>Jakub Zomer</a> and with the dixieland jazz band <a href="http://www.appendixie.cz/en/" target=_blank>AppenDixie</a> led by Petr Seghman. </p>
+            </div>
+        </div>
+    </section>
+
     <!-- YouTube Section -->
     <section id="videos" class="container-fluid widget-section text-center">
         <div class="container">
             <div class="col-lg-12">
                 <h2>Videos</h2>
                 <div class="row">
-            <div class="col-lg-6">
                 <div class="video-container">
-                    <iframe width="640" height="360" src="https://www.youtube.com/embed/gyTgksBmpt4?rel=0" frameborder="0" allowfullscreen></iframe>
-                </div>
-                <br>
-                <div class="video-container">
-                    <iframe width="640" height="360" src="https://www.youtube.com/embed/8qhl3tzT9zY?rel=0" frameborder="0" allowfullscreen></iframe>
-                </div>
-                <br>
-                <div class="video-container">
-                    <iframe width="640" height="360" src="https://www.youtube.com/embed/FmL9Cf9Zbs4?rel=0" frameborder="0" allowfullscreen></iframe>
-                </div>
-                </div>
-            <div class="col-lg-6">
-                <div class="video-container">
-                    <iframe width="640" height="360" src="https://www.youtube.com/embed/B8lNTvw0Nko?rel=0" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="640" height="360" src="https://www.youtube.com/embed/sejtry5MuW0?rel=0" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <br>
                 <div class="video-container">
@@ -186,8 +173,15 @@
                 </div>
                 <br>
                 <div class="video-container">
+                    <iframe width="640" height="360" src="https://www.youtube.com/embed/gyTgksBmpt4?rel=0" frameborder="0" allowfullscreen></iframe>
+                </div>
+                <br>
+                <div class="video-container">
                     <iframe width="640" height="360" src="https://www.youtube.com/embed/szL6Ulq1XCo?rel=0" frameborder="0" allowfullscreen></iframe>
                 </div>
+                <br>
+                <div class="video-container">
+                    <iframe width="640" height="360" src="https://www.youtube.com/embed/B8lNTvw0Nko?rel=0" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
@@ -200,9 +194,10 @@
             <div class="col-lg-12">
                 <h2>Photos</h2>
                 <div class="flickrwrap">
-                    <iframe src="https://www.flickr.com/photos/missmikeymay/34663094381/player/" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+                    <iframe src="https://www.flickr.com/photos/missmikeymay/30534245807/player/" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
                 </div>
                 <div class="row">
+                  <!--
                    <p> <br> </p>
                    <h3>Photo Albums</h3>
                    <div class="row">
@@ -235,7 +230,7 @@
                         <br>26 July 2016</p>
                        </div>
                     </div>
-               </div>
+               </div> -->
             </div>
         </div>
     </section>
@@ -266,9 +261,9 @@
     <footer>
         <div class="container text-center">
             <p>Copyright &copy; Miss Mikey May 2017</p>
-            <p>Front page photo courtesy of <a href="https://leannekiddorivers.wordpress.com/" target=_blank>Leanne Kiddo Rivers</a></p>
+            <p>Front page photo courtesy of Ales Hrabe</p>
             <p>...</p>
-            <p>This website was built with Jekyll and published with GitHub Pages based on the awesome open-source theme from <a href="https://startbootstrap.com/template-overviews/grayscale/">Start Bootstrap Grayscale</a></p>
+            <p>This website is open-source and published with GitHub Pages based on the awesome open-source theme from <a href="https://startbootstrap.com/template-overviews/grayscale/">Start Bootstrap Grayscale</a></p>
         </div>
     </footer>
 
